fix(actions): conditions spacing (#5494)

--- a/src/pages/automate/workflows/editor/visualBuilder/editors/ConditionsNodeEditor/ConditionsNodeEditor.less
+++ b/src/pages/automate/workflows/editor/visualBuilder/editors/ConditionsNodeEditor/ConditionsNodeEditor.less
@@ -78,7 +78,7 @@
     .accordionBody {
         display: flex;
         flex-direction: column;
-        gap: @layout-spacing-m;
+        gap: @layout-spacing-xs;
     }
 
     .cta {
